--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,36 +9,102 @@ $padding: calc((65px - 0.9rem)/2);
     justify-content: space-around;
 }
 
-
+body {
+    min-width: 1280px;
+}
 
 .container {
     @extend %flexy;
+    margin-top: 13px;
 }
 
 .header-nav {
     @extend %flexy;
+    height: 65px;
 }
 
-.nav-item {
+.nav-item, .dropdown {
     color: $nav-font;
-    font-size: 0.8rem;
+    font-size: 14px;
     font-family: 'Lato', sans-serif;
-    margin: auto 23px;
+    margin: 0 auto;
+    padding: 20px 35px 32px 35px;
     text-decoration: none;
 }
 
 .separator {
     display: inline-block;
-    width: 14px;
+    width: 10px;
 }
 
-// .nav-item:first-child {
-//     color: #fff;
-//     background-color: $nav-items-bgd;
-//     background-size: cover;
-//     margin: 0;
-//     border-bottom: 3px solid $nav-item-border;
-// }
+.arrow {
+    position: relative;
+    bottom: 2px;
+}
+// .header-nav a:hover, .dropdown:hover .dropbtn
+.nav-item:hover {
+    color: #fff;
+    background-color: $nav-items-bgd;
+    background-size: cover;
+    border-bottom: 3px solid $nav-item-border;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 78px;
+    height: 384px;
+    width: 100%;
+    min-width: 1280px;
+    background-color: $nav-items-bgd;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content * {
+    color: #fff;
+    text-decoration: none;
+}
+
+.dropdown-content a:hover {
+    text-decoration: underline;
+}
+  
+.dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.drowdown-img {
+    width: 273px;
+    height: 278px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.dropdown:hover .dropdown-content .dropdown-container {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    flex-basis: auto
+}
+
+.dropdown-container a {
+    margin-top: 16px;
+}
+
+.dropdown-container strong {
+    display: inline-block;
+    position: relative;
+    bottom: 18px;
+    font-weight: 800;
+}
 
 // .nav-item:first-child .nav-item-active{
 //     display: inline-block;
