--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,12 +9,19 @@ $padding: calc((65px - 0.9rem)/2);
     justify-content: space-around;
 }
 
+// html {
+//     max-width: 1280px;
+//     margin: 0 auto;
+// }
+
 body {
-    min-width: 1168px;
+    margin: 0 auto;
+    width: 1280px;
     font-family: 'Lato', sans-serif;
-    margin-left: 56px;
-    margin-right: 56px;
+    padding-left: 56px;
+    padding-right: 56px;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
 }
 
 .container {
@@ -37,10 +44,13 @@ body {
 .nav-item, .dropdown {
     color: $nav-font;
     font-size: 12px;
-    font-family: 'Lato', sans-serif;
     margin: 0 auto;
     padding: 25px 23px 32px 23px;
     text-decoration: none;
+}
+
+.nav-item:nth-child(n + 5) {
+    color: #afaead;
 }
 
 .separator {
@@ -51,15 +61,16 @@ body {
 .arrow {
     position: relative;
     bottom: 2px;
+    color: #d1d5d8;
 }
 
 .icons-block * {
+    color: #afaead;
     font-size: 22px;
     padding-top: 15.5px;
     padding-bottom: 24.5px;
 }
 
-// .header-nav a:hover, .dropdown:hover .dropbtn
 .nav-item:hover {
     color: #fff;
     background-color: $nav-items-bgd;
@@ -77,20 +88,13 @@ body {
     background-color: $nav-items-bgd;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-}
-
-.dropdown-content * {
-    color: #fff;
-    text-decoration: none;
-}
-
-.dropdown-content a:hover {
-    text-decoration: underline;
-}
-  
-.dropdown:hover .dropdown-content {
-    display: flex;
-    flex-direction: column;
+    * {
+        color: #fff;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
 }
 
 .drowdown-img {
@@ -103,13 +107,12 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-}
-
-.dropdown:hover .dropdown-content .dropdown-container {
-    display: flex;
-    flex-direction: column;
-    flex-basis: auto;
-    font-size: 14px;
+    .dropdown-container {
+        display: flex;
+        flex-direction: column;
+        flex-basis: auto;
+        font-size: 14px;
+    }
 }
 
 .dropdown-container a {
@@ -142,50 +145,69 @@ body {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 23px;
+    margin-bottom: 25px;
 }
 
 .slider-left {
     color: #fff;
     height: calc(509px - 80px - 48px);
-    width: calc(873px - 67px);
+    width: calc(873px - 67px - 67px);
     padding-top: 80px;
     padding-bottom: 48px;
     padding-left: 67px;
+    padding-right: 67px;
     background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/carousel.png);
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    h1 {
+        font-size: 36px;
+        font-weight: bold;
+        line-height: 50px;
+    }
+    p {
+        font-size: 13px;
+        line-height: 16px;
+    }
+    button {
+        background-color:rgba(255, 255, 255, 0);
+        border: 2px solid rgba(255, 255, 255, 0.5);
+        color: #fff;
+    }
 }
 
-.slider-left h1 {
-    font-size: 36px;
-    font-weight: bold;
-    line-height: 50px;
+//***************for slider****************
+
+.slider-left.central {
+    h1, p {
+        background-image: url();
+        text-align: center;
+    }
+    button {
+        align-self: center;
+    }
 }
 
-.slider-left p {
-    font-size: 13px;
-    line-height: 16px;
+.slider-left.right {
+    h1, p {
+        background-image: url();
+        text-align: right;
+        
+    }
+    button {
+        align-self: flex-end;
+    }
 }
 
-.slider-left button {
-    background-color:rgba(255, 255, 255, 0);
-    border: 2px solid rgba(255, 255, 255, 0.5);
-    color: #fff;
-}
+//***************for slider****************
 
 .pagination-wrapper {
-    width: 148px;
-    height: 37px;
+    width: max-content;
+    height: max-content;
     background: rgba(255, 255, 255, 0);
+    align-self: center;
 }
-
-// .pagination {
-//     position: relative;
-//     left: 40%;
-//     top: 40%;
-// }
 
 .pagination span{
     display: inline-block;
@@ -194,6 +216,9 @@ body {
     height: 10px;
     border-radius: 50%;
 }
+
+// 'active' class must be added to .pagination span element while clicking on dot, 
+// appropriate class (nothing, 'central' or 'right') should be added to .slider-left block. Implement with JS
 
 .pagination span.active{
     border: 2px solid #fff;
@@ -212,28 +237,31 @@ body {
 
 .slider-right {
     width: 271px;
+    height: 506px;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.slider-right h3 {
-    font-size: 14px;
-}
-
-.slider-right p {
-    padding: 0 38px;
-    line-height: 13px;
-    font-size: 11px;
-}
-
-.slider-right button {
-    background-color: #fff;
-    border: 2px solid #3a5b96;
-    color: #3a5b96;
-    padding-bottom: 7px;
-    margin: 0 auto;
+    h3 {
+        font-size: 15px;
+        display: inline-block;
+        margin-bottom: 15px;
+        color: $nav-font;
+    }
+    p {
+        padding: 0 38px;
+        line-height: 16px;
+        font-size: 13px;
+        width: 195px;
+        color: $nav-font;
+    }
+    button {
+        background-color: #fff;
+        border: 2px solid #3a5b96;
+        color: #3a5b96;
+        padding-bottom: 7px;
+        margin: 3px auto;
+    }
 }
 
 button {
@@ -247,7 +275,7 @@ button:focus {
     outline: 0;
 }
 
-img[src*="f"] {
+img[alt*="facebook"] {
     position: relative;
     top: 2px;
     margin-right: 16px;
@@ -261,15 +289,97 @@ img[src*="f"] {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    span {
+        font-size: 77px;
+        font-weight: bold;
+    }
+    div {
+        font-size: 18px;
+        text-transform: uppercase;
+        line-height: 29px;
+        margin-bottom: 23px;
+    }
 }
 
-.sales-block span {
-    font-size: 77px;
-    font-weight: bold;
+.banner {
+    color: #fff;
+    background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/banner.png);
+    background-size: cover;
+    height: 445px;
+    width: 1280px;
+    margin: 0 -56px 0 -56px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h2 {
+        font-size: 36px;
+        font-weight: 900;
+        margin-bottom: 42px;
+    }
+    p {
+        font-size: 11px;
+    }
 }
 
-.sales-block div {
-    font-size: 18px;
-    text-transform: uppercase;
-    line-height: 29px;
+.services {
+    background-color: #45413e;
+    width: 100%;
+    margin-left: -56px;
+    padding: 50px 56px;
+    @extend %flexy;
+    .service-block {
+        @extend %flexy;
+        width: 310px;
+        h3 {
+            color: #fff;
+            font-size: 14px;
+            margin: 0 0 20px 0;
+        }
+        p {
+            color: #7b7774;
+            font-size: 11px;
+            line-height: 13px;
+            width: 230px;
+        }
+        img {
+            object-fit: scale-down;
+            vertical-align: middle;
+            margin: 0 30px;
+        }
+    }
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 -56px;
+    padding: 40px 54px 36px 54px;
+    font-size: 10px;
+    color: $nav-font;
+    a {
+        color: $nav-font;
+        text-decoration: none;
+    }
+    .copyright {
+        width: 180px;
+        display: flex;
+        flex-direction: column;
+        * {
+            flex-grow: 1;
+        }
+    }
+    .sitemap {
+        flex-grow: 4;
+        @extend %flexy;
+        div {
+            display: flex;
+            flex-direction: column;
+        }
+        a {
+            color: #8a8887;
+            text-decoration: none;
+        }
+    }
 }
