finishing on home page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 $nav-font:rgb(69, 65, 62);
 $nav-items-bgd: #262a32;
 $nav-item-border: #84bc22;
-$padding: calc((65px - 0.9rem)/2);
+// $padding: calc((65px - 0.9rem)/2);
 
 %flexy {
     display: flex;
@@ -9,15 +9,17 @@ $padding: calc((65px - 0.9rem)/2);
     justify-content: space-around;
 }
 
-// html {
-//     max-width: 1280px;
-//     margin: 0 auto;
-// }
+html {
+    // width: 1280px;
+    // margin: 0 auto;
+}
 
 body {
     margin: 0 auto;
-    width: 1280px;
+    min-height: 100vh;
+    width: 100%;
     font-family: 'Lato', sans-serif;
+    background-color: #fff;
     padding-left: 56px;
     padding-right: 56px;
     box-sizing: border-box;
@@ -28,9 +30,20 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 13px;
-    margin-left: -56px;
-    margin-right: -56px;
+    background-color: #fff;
+    // min-width: 1280px;
+    width: 100%;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    // margin-top: 13px;
+    margin: 0 auto;
+    // margin-left: -56px;
+    // margin-right: -56px;
+    padding-top: 13px;
     padding-left: 56px;
     padding-right: 56px;
     border-bottom: 1px solid #f3f0ea;
@@ -38,7 +51,7 @@ body {
 
 .header-nav {
     @extend %flexy;
-    height: 65px;
+    height: 68px;
 }
 
 .nav-item, .dropdown {
@@ -47,6 +60,10 @@ body {
     margin: 0 auto;
     padding: 25px 23px 32px 23px;
     text-decoration: none;
+}
+
+i {
+    cursor: pointer;
 }
 
 .nav-item:nth-child(n + 5) {
@@ -62,6 +79,11 @@ body {
     position: relative;
     bottom: 2px;
     color: #d1d5d8;
+}
+
+.icons-block .nav-item {
+    box-sizing: border-box;
+    height: 68px;
 }
 
 .icons-block * {
@@ -82,7 +104,7 @@ body {
     display: none;
     position: absolute;
     left: 0;
-    top: 78px;
+    top: 81px;
     height: 384px;
     width: 100%;
     background-color: $nav-items-bgd;
@@ -93,7 +115,8 @@ body {
         text-decoration: none;
     }
     a:hover {
-        text-decoration: underline;
+        color: #83bc22;
+        transition:0.4s;
     }
 }
 
@@ -140,12 +163,17 @@ body {
 //     padding-right: 5px;
 // }
 
+main {
+    padding-top: 81px;
+    min-height: 100vh;
+}
+
 .slider-block {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 23px;
-    margin-bottom: 25px;
+    width: 1168px;
+    margin: 23px auto 25px;
 }
 
 .slider-left {
@@ -174,6 +202,13 @@ body {
         background-color:rgba(255, 255, 255, 0);
         border: 2px solid rgba(255, 255, 255, 0.5);
         color: #fff;
+        transition: all 0.2s ease-out;
+    }
+    button:hover {
+        background-color:rgba(255, 255, 255, 0.5);
+        border: 2px solid rgba(255, 255, 255, 0.5);
+        border: 0px;
+        color: rgba(0, 0, 0, 0.5);
     }
 }
 
@@ -207,6 +242,7 @@ body {
     height: max-content;
     background: rgba(255, 255, 255, 0);
     align-self: center;
+    cursor: pointer;
 }
 
 .pagination span{
@@ -261,24 +297,29 @@ body {
         color: #3a5b96;
         padding-bottom: 7px;
         margin: 3px auto;
+        transition: all 0.2s ease-out;
+        * {
+            display: inline-block;
+            padding-top: 3px;
+        }
+    }
+    button:hover {
+        background-color: #3a5b96;
+        color: #fff;
     }
 }
 
 button {
-    font-size: 10px;
+    font-size: 12px;
+    padding-top: 2px;
     width: 148px;
     height: 37px;
     border-radius: 50px;
+    cursor: pointer;
 }
 
 button:focus {
     outline: 0;
-}
-
-img[alt*="facebook"] {
-    position: relative;
-    top: 2px;
-    margin-right: 16px;
 }
 
 .sales-block {
@@ -301,12 +342,89 @@ img[alt*="facebook"] {
     }
 }
 
+.products-block {
+    background-color: #262a32;
+    width: 100%;
+    margin-left: -56px;
+    padding: 50px 56px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .items {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .item {
+            width: 270px;
+            height: 365px;
+            background-color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            font-size: 13px;
+            margin: 15px;
+            border-radius: 10px;
+            div {
+                height: 260px;
+            }
+            h4 {
+                color: #2c3e50;
+                margin: 0 auto;
+                padding: 20px;
+            }
+            span {
+                color: #011847;
+                margin: 0 auto;
+            }
+        }
+        #item-1 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-1.png);
+            background-repeat: no-repeat;
+        }
+        #item-2 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-2.png);
+            background-repeat: no-repeat;
+        }
+        #item-3 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-3.png);
+            background-repeat: no-repeat;
+        }
+        #item-4 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-4.png);
+            background-repeat: no-repeat;
+        }
+        #item-5 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-5.png);
+            background-repeat: no-repeat;
+        }
+        #item-6 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-6.png);
+            background-repeat: no-repeat;
+        }
+        #item-7 {
+            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-7.png);
+            background-repeat: no-repeat;
+        }
+    }
+    button {
+        border: 2px solid #e8e2d6;
+        background-color: #262a32;
+        color: #fff;
+        width: 265px;
+        margin: 0 auto;
+        i {
+            transform: scale(1, -1);
+        }
+    }
+}
+
 .banner {
     color: #fff;
     background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/banner.png);
     background-size: cover;
     height: 445px;
-    width: 1280px;
+    // width: 100%;
     margin: 0 -56px 0 -56px;
     text-align: center;
     display: flex;
@@ -318,7 +436,7 @@ img[alt*="facebook"] {
         margin-bottom: 42px;
     }
     p {
-        font-size: 11px;
+        font-size: 12px;
     }
 }
 
@@ -338,7 +456,7 @@ img[alt*="facebook"] {
         }
         p {
             color: #7b7774;
-            font-size: 11px;
+            font-size: 12px;
             line-height: 13px;
             width: 230px;
         }
@@ -354,20 +472,43 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    max-height: 344px;
     margin: 0 -56px;
     padding: 40px 54px 36px 54px;
-    font-size: 10px;
+    font-size: 12px;
     color: $nav-font;
     a {
         color: $nav-font;
         text-decoration: none;
     }
     .copyright {
-        width: 180px;
         display: flex;
         flex-direction: column;
         * {
             flex-grow: 1;
+        }
+        > p {
+            width: 113px;
+            height: 30px;
+            line-height: 14px;
+        }
+        h3 {
+            margin: 12px 0;
+            font-weight: bold;
+        }
+        div {
+            width: 190px;
+            height: 120px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            line-height: 12px;
+            p {
+                line-height: 15px;
+            }
+        }
+        a {
+            display: block;
         }
     }
     .sitemap {
@@ -376,10 +517,32 @@ footer {
         div {
             display: flex;
             flex-direction: column;
+            span {
+                font-weight: bold;
+                display: block;
+                margin: 2px 0 30px 0;
+            }
         }
         a {
             color: #8a8887;
-            text-decoration: none;
+            display: block;
+            margin-bottom: 15px;
+        }
+        a:hover {
+            color: #83bc22;
+            transition:0.4s;
+        }
+    }
+    .social {
+        width: 100px;
+        display: flex;
+        justify-content: space-around;
+        * {
+            color: #8a8887;
+        }
+        i:hover {
+            color: #83bc22;
+            transition:0.4s;
         }
     }
 }
