--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,10 @@
 
 body {
   margin: 0 auto;
-  width: 1280px;
+  min-height: 100vh;
+  width: 100%;
   font-family: 'Lato', sans-serif;
+  background-color: #fff;
   padding-left: 56px;
   padding-right: 56px;
   box-sizing: border-box;
@@ -16,15 +18,22 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 13px;
-  margin-left: -56px;
-  margin-right: -56px;
+  background-color: #fff;
+  width: 100%;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  margin: 0 auto;
+  padding-top: 13px;
   padding-left: 56px;
   padding-right: 56px;
   border-bottom: 1px solid #f3f0ea; }
 
 .header-nav {
-  height: 65px; }
+  height: 68px; }
 
 .nav-item, .dropdown {
   color: #45413e;
@@ -32,6 +41,9 @@ body {
   margin: 0 auto;
   padding: 25px 23px 32px 23px;
   text-decoration: none; }
+
+i {
+  cursor: pointer; }
 
 .nav-item:nth-child(n + 5) {
   color: #afaead; }
@@ -44,6 +56,10 @@ body {
   position: relative;
   bottom: 2px;
   color: #d1d5d8; }
+
+.icons-block .nav-item {
+  box-sizing: border-box;
+  height: 68px; }
 
 .icons-block * {
   color: #afaead;
@@ -61,7 +77,7 @@ body {
   display: none;
   position: absolute;
   left: 0;
-  top: 78px;
+  top: 81px;
   height: 384px;
   width: 100%;
   background-color: #262a32;
@@ -71,7 +87,8 @@ body {
     color: #fff;
     text-decoration: none; }
   .dropdown-content a:hover {
-    text-decoration: underline; }
+    color: #83bc22;
+    transition: 0.4s; }
 
 .drowdown-img {
   width: 273px;
@@ -97,12 +114,16 @@ body {
   bottom: 18px;
   font-weight: 800; }
 
+main {
+  padding-top: 81px;
+  min-height: 100vh; }
+
 .slider-block {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 23px;
-  margin-bottom: 25px; }
+  width: 1168px;
+  margin: 23px auto 25px; }
 
 .slider-left {
   color: #fff;
@@ -127,7 +148,13 @@ body {
   .slider-left button {
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid rgba(255, 255, 255, 0.5);
-    color: #fff; }
+    color: #fff;
+    transition: all 0.2s ease-out; }
+  .slider-left button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border: 0px;
+    color: rgba(0, 0, 0, 0.5); }
 
 .slider-left.central h1, .slider-left.central p {
   background-image: url();
@@ -147,7 +174,8 @@ body {
   width: max-content;
   height: max-content;
   background: rgba(255, 255, 255, 0);
-  align-self: center; }
+  align-self: center;
+  cursor: pointer; }
 
 .pagination span {
   display: inline-block;
@@ -192,21 +220,25 @@ body {
     border: 2px solid #3a5b96;
     color: #3a5b96;
     padding-bottom: 7px;
-    margin: 3px auto; }
+    margin: 3px auto;
+    transition: all 0.2s ease-out; }
+    .slider-right button * {
+      display: inline-block;
+      padding-top: 3px; }
+  .slider-right button:hover {
+    background-color: #3a5b96;
+    color: #fff; }
 
 button {
-  font-size: 10px;
+  font-size: 12px;
+  padding-top: 2px;
   width: 148px;
   height: 37px;
-  border-radius: 50px; }
+  border-radius: 50px;
+  cursor: pointer; }
 
 button:focus {
   outline: 0; }
-
-img[alt*="facebook"] {
-  position: relative;
-  top: 2px;
-  margin-right: 16px; }
 
 .sales-block {
   color: #fff;
@@ -225,12 +257,73 @@ img[alt*="facebook"] {
     line-height: 29px;
     margin-bottom: 23px; }
 
+.products-block {
+  background-color: #262a32;
+  width: 100%;
+  margin-left: -56px;
+  padding: 50px 56px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .products-block .items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; }
+    .products-block .items .item {
+      width: 270px;
+      height: 365px;
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      font-size: 13px;
+      margin: 15px;
+      border-radius: 10px; }
+      .products-block .items .item div {
+        height: 260px; }
+      .products-block .items .item h4 {
+        color: #2c3e50;
+        margin: 0 auto;
+        padding: 20px; }
+      .products-block .items .item span {
+        color: #011847;
+        margin: 0 auto; }
+    .products-block .items #item-1 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-1.png);
+      background-repeat: no-repeat; }
+    .products-block .items #item-2 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-2.png);
+      background-repeat: no-repeat; }
+    .products-block .items #item-3 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-3.png);
+      background-repeat: no-repeat; }
+    .products-block .items #item-4 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-4.png);
+      background-repeat: no-repeat; }
+    .products-block .items #item-5 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-5.png);
+      background-repeat: no-repeat; }
+    .products-block .items #item-6 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-6.png);
+      background-repeat: no-repeat; }
+    .products-block .items #item-7 {
+      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-7.png);
+      background-repeat: no-repeat; }
+  .products-block button {
+    border: 2px solid #e8e2d6;
+    background-color: #262a32;
+    color: #fff;
+    width: 265px;
+    margin: 0 auto; }
+    .products-block button i {
+      transform: scale(1, -1); }
+
 .banner {
   color: #fff;
   background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/banner.png);
   background-size: cover;
   height: 445px;
-  width: 1280px;
   margin: 0 -56px 0 -56px;
   text-align: center;
   display: flex;
@@ -241,7 +334,7 @@ img[alt*="facebook"] {
     font-weight: 900;
     margin-bottom: 42px; }
   .banner p {
-    font-size: 11px; }
+    font-size: 12px; }
 
 .services {
   background-color: #45413e;
@@ -256,7 +349,7 @@ img[alt*="facebook"] {
       margin: 0 0 20px 0; }
     .services .service-block p {
       color: #7b7774;
-      font-size: 11px;
+      font-size: 12px;
       line-height: 13px;
       width: 230px; }
     .services .service-block img {
@@ -268,24 +361,59 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-height: 344px;
   margin: 0 -56px;
   padding: 40px 54px 36px 54px;
-  font-size: 10px;
+  font-size: 12px;
   color: #45413e; }
   footer a {
     color: #45413e;
     text-decoration: none; }
   footer .copyright {
-    width: 180px;
     display: flex;
     flex-direction: column; }
     footer .copyright * {
       flex-grow: 1; }
+    footer .copyright > p {
+      width: 113px;
+      height: 30px;
+      line-height: 14px; }
+    footer .copyright h3 {
+      margin: 12px 0;
+      font-weight: bold; }
+    footer .copyright div {
+      width: 190px;
+      height: 120px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      line-height: 12px; }
+      footer .copyright div p {
+        line-height: 15px; }
+    footer .copyright a {
+      display: block; }
   footer .sitemap {
     flex-grow: 4; }
     footer .sitemap div {
       display: flex;
       flex-direction: column; }
+      footer .sitemap div span {
+        font-weight: bold;
+        display: block;
+        margin: 2px 0 30px 0; }
     footer .sitemap a {
       color: #8a8887;
-      text-decoration: none; }
+      display: block;
+      margin-bottom: 15px; }
+    footer .sitemap a:hover {
+      color: #83bc22;
+      transition: 0.4s; }
+  footer .social {
+    width: 100px;
+    display: flex;
+    justify-content: space-around; }
+    footer .social * {
+      color: #8a8887; }
+    footer .social i:hover {
+      color: #83bc22;
+      transition: 0.4s; }
