--- a/scss/main.scss
+++ b/scss/main.scss
@@ -203,6 +203,7 @@ main {
         border: 2px solid rgba(255, 255, 255, 0.5);
         color: #fff;
         transition: all 0.2s ease-out;
+        font-family: 'Lato', sans-serif;
     }
     button:hover {
         background-color:rgba(255, 255, 255, 0.5);
@@ -298,6 +299,7 @@ main {
         padding-bottom: 7px;
         margin: 3px auto;
         transition: all 0.2s ease-out;
+        font-family: 'Lato', sans-serif;
         * {
             display: inline-block;
             padding-top: 3px;
@@ -316,6 +318,7 @@ button {
     height: 37px;
     border-radius: 50px;
     cursor: pointer;
+    font-family: 'Lato', sans-serif;
 }
 
 button:focus {
@@ -344,67 +347,155 @@ button:focus {
 
 .products-block {
     background-color: #262a32;
-    width: 100%;
+    width: 100vw;
     margin-left: -56px;
-    padding: 50px 56px;
+    padding: 50px 0;
+    // box-sizing: border-box;
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    h3 {
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
+        padding: 30px 0;
+        display: flex;
+        align-items: center;     
+    }
+    h3::before, h3::after {
+        content: '';
+        flex: 1;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    }
+    h3:not(:empty)::before {
+        margin: 0 3em;
+    }
+    h3:not(:empty)::after {
+        margin: 0 3em;
+    }
     .items {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        .item {
+        justify-content: center;
+        .item, .static-item {
             width: 270px;
             height: 365px;
             background-color: #fff;
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            justify-content: space-between;
             font-size: 13px;
             margin: 15px;
             border-radius: 10px;
-            div {
+            position: relative;
+            .img {
                 height: 260px;
+                border-top-left-radius: inherit;
+                border-top-right-radius: inherit;
+            }
+            #item-1 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-1.png);
+                background-repeat: no-repeat;
+            }
+            #item-2 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-2.png);
+                background-repeat: no-repeat;
+            }
+            #item-3 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-3.png);
+                background-repeat: no-repeat;
+            }
+            #item-4 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-4.png);
+                background-repeat: no-repeat;
+            }
+            #item-5 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-5.png);
+                background-repeat: no-repeat;
+            }
+            #item-6 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-6.png);
+                background-repeat: no-repeat;
+            }
+            #item-7 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-7.png);
+                background-repeat: no-repeat;
             }
             h4 {
                 color: #2c3e50;
                 margin: 0 auto;
                 padding: 20px;
+                text-align: center;
             }
             span {
                 color: #011847;
                 margin: 0 auto;
+                padding-bottom: 20px;
             }
         }
-        #item-1 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-1.png);
-            background-repeat: no-repeat;
+        .item .overlay {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            bottom: 0;
+            background-image: linear-gradient(90deg, rgb(28,193,103) 0%, rgb(46,211,162) 100%);
+            border-radius: inherit;
+            z-index: 9;
+            opacity: 0;  
+            visibility: hidden;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            justify-content: center;
+            padding: 22px;
+            box-sizing: border-box;
+            button {
+                background-color: #fff;
+                border: none;
+                border-radius: 50%;
+                width: 90px;
+                height: 90px;
+                margin: 12px;
+                align-self: center;
+            }
+            button:hover {
+                box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+                transition:0.4s;
+            }
+            .addToCart img {
+                width: 29px;
+            }
+            .addToWishlist img {
+                width: 33px;
+            }
         }
-        #item-2 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-2.png);
-            background-repeat: no-repeat;
+        .item:hover .overlay{
+            opacity: 0.93;
+            visibility: visible;
         }
-        #item-3 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-3.png);
-            background-repeat: no-repeat;
-        }
-        #item-4 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-4.png);
-            background-repeat: no-repeat;
-        }
-        #item-5 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-5.png);
-            background-repeat: no-repeat;
-        }
-        #item-6 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-6.png);
-            background-repeat: no-repeat;
-        }
-        #item-7 {
-            background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/item-7.png);
-            background-repeat: no-repeat;
+        .static-item {
+            background-image: 
+            linear-gradient(to bottom, rgba(220, 89, 135, 0.85), rgba(103,91,153, 0.85)),
+            url(/Users/yuliiayevhenieva/envs/osf-academy/images/static-item.png);
+            background-size: cover;
+            background-position-x: right;
+            color: #fff;
+            padding: 22px;
+            box-sizing: border-box;
+            position: relative;
+            div {
+                width: 130px;
+                position: absolute;
+                bottom: 22px;
+                p {
+                    margin: 8px;
+                    line-height: 17px;
+                }
+            }
         }
     }
     button {
@@ -412,13 +503,19 @@ button:focus {
         background-color: #262a32;
         color: #fff;
         width: 265px;
-        margin: 0 auto;
+        margin: 34px auto 0;
+        font-family: 'Lato', sans-serif;
+        transition: all .2s ease-out;
         i {
             transform: scale(1, -1);
         }
     }
+    button:hover {
+        color: #262a32;
+        background-color: #fff;
+        border: 2px solid #262a32;
+    }
 }
-
 .banner {
     color: #fff;
     background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/banner.png);
@@ -439,7 +536,111 @@ button:focus {
         font-size: 12px;
     }
 }
-
+.latest-posts{
+    background-color: #262a32;
+    width: 100vw;
+    margin-left: -56px;
+    padding: 40px 0;
+    // box-sizing: border-box;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    h2, p {
+        text-align: center;
+    }
+    h2 {
+        font-weight: bold;
+        font-size: 26px;
+    }
+    .btn {
+        text-align: center;
+        width: 590px;
+        margin: 18px auto;
+        button {
+            border-radius: 0;
+            border: none;
+            width: 30px;
+            height: 30px;
+            background-color: #2d343a;
+            color: #fff;
+        }
+    }
+    h3 {
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
+        // padding: 30px 0;
+        display: flex;
+        align-items: center;   
+        // display: inline-block;  
+    }
+    h3::before, h3::after {
+        content: '';
+        flex: 1;
+        border-bottom: 2px solid rgb(255, 255, 255);
+    }
+    h3:not(:empty)::before {
+        margin: .5em;
+    }
+    h3:not(:empty)::after {
+        margin: .5em;
+    }
+    .posts {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        .post {
+            width: 270px;
+            height: 296px;
+            background-color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            font-size: 13px;
+            margin: 15px;
+            border-radius: 10px;
+            .image {
+                height: 190px;
+                border-top-left-radius: inherit;
+                border-top-right-radius: inherit;
+                // border-radius: inherit;
+            }
+            #post-1 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/product-1.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            #post-2 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/product-2.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            #post-3 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/product-3.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            #post-4 {
+                background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/product-4.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            h4 {
+                color: #2c3e50;
+                margin: 0 auto;
+                padding: 20px;
+                text-align: center;
+            }
+            span {
+                color: #83bc22;
+                margin: 0 auto;
+                padding-bottom: 20px;
+            }
+        }
+    }
+}
 .services {
     background-color: #45413e;
     width: 100%;
